<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.propertymanagementapp.ui.properties.AddPropertyViewModel" />
    </data>

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <include layout="@layout/action_bar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/add_property_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={viewModel.address}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_1"
                android:weightSum="3"
                android:layout_below="@id/add_property_address"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="1"
                    android:id="@+id/add_property_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.city}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="1"
                    android:id="@+id/add_property_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/state">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.state}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="1"
                    android:id="@+id/add_property_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/country">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.country}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_2"
                android:weightSum="3"
                android:layout_below="@+id/linear_1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/add_property_purchasePrice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.purchasePrice}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/add_property_longitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/longitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.longitude}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/add_property_latitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:hint="@string/latitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.latitude}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@mipmap/default_image"
                android:id="@+id/add_property_image_view"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/linear_2"
                android:layout_width="180dp"
                android:layout_height="180dp"/>

            <TextView
                android:textStyle="bold|italic"
                android:text="@string/image"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/add_property_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/add_property_camera_buttons"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_above="@id/add_property_submit_button"
                android:layout_height="wrap_content">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/add_property_camera"
                    android:background="@drawable/button_primary"
                    android:text="@string/open_camera"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_weight="1"
                    android:id="@+id/add_property_open_files"
                    android:background="@drawable/button_primary"
                    android:text="@string/open_files"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            <Button
                android:onClick="@{viewModel::onSubmitButtonClick}"
                android:id="@+id/add_property_submit_button"
                android:background="@drawable/button_primary"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </LinearLayout>

</layout>