<layout>
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.propertymanagementapp.ui.auth.AuthViewModel" />

    </data>

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/fragment_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:onClick="@{viewModel::onLoginButtonClick}"
            android:background="@drawable/button_primary"
            android:id="@+id/fragment_login_submit"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>


    </LinearLayout>
</layout>